# PyResOps

./: .env.example  .gitignore  PROJECT_ANALYSIS_REPORT.md  README-zh.md  README.md  camels_01013500_selected_vars.csv  camels_npz_basin0_01013500.csv  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: default_reservoir.yaml
data/: fill_missing_predict_from_inflow.py  summarize_flood_events.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md  chapter5_results_codex_outline_prompt.md  chapter5_results_outline_eswa.md  notebook_01_layers_basics.ipynb  notebook_02_domain_modules_core.ipynb  notebook_03_constraints_rules_metrics.ipynb  notebook_04_end_to_end_mcp_and_rolling_ops.ipynb  水库控制运用计划.md
examples/: case1_flood_dispatch.py  case2_program_comparison.py  case3_persistence.py  extension_templates.py
experiments/: README.md  REFACTOR_SUMMARY.md  __init__.py  ablation_study.py  automated_experiment.py  baseline_human.py  build_chapter5_results.py  build_wrongtest_report.py  check_paper_validation_gates.py  config.yml  create_forecast_error_wrongtest.py  dynamic_experiment.py  evaluation_metrics.py  mcp_agent_experiment.py  paper_experiment_runner.py  preprocess_real_events.py  result_schema.py  run_cross_model_phase_g.py  run_experiments.py  run_minimal_validation.py  run_paper_validation.py  run_realdata_workflows.py  run_scenario_experiment.py  run_stage1_baseline.py  run_stage1_dynamic_command_intervention.py  run_stage1_instruction_static.py  run_stage2_dynamic_command_intervention.py  run_stage2_instruction_static.py  run_stage2_workflow.py  run_stage3_dynamic_command_intervention.py  run_stage3_instruction_static.py  run_stage3_instruction_static_multimodel.py  run_stage3_llm_mcp.py  scenario_config.py  smoke_test_model_calls.py  static_experiment.py  statistical_analysis.py  unified_runner.py  visualization.py
(+405 files in other folders)
