[project]
name = "pyresops"
version = "0.1.0"
description = "Modular reservoir operation scheduling system with FastMCP integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.2",
    "scipy>=1.10.0",
    "xarray>=2026.2.0",
    "netcdf4>=1.7.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "agno>=2.5.14",
    "matplotlib>=3.10.8",
    "openai>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyresops"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
